testsuite/poke.pkl/ass-diag-4.pk
/* { dg-do compile } */

defun foo = void:
  {
   defvar i = 10;
   i = "foo";  /* { dg-error ".*\n.*" } */
  }
  
